--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
-.gitattributes
-.gitignore
+.gitattributes export-ignore
+.gitignore export-ignore
 
 composer.json
-composer.lock
+composer.lock export-ignore
