--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,15 @@
             "email": "djsmits12@gmail.com"
         }
     ],
-    "license": "MIT"
+    "license": "MIT",
+  "require": {
+    "ext-pcntl": "*",
+    "ext-sockets": "*",
+    "opis/closure": "^3.6",
+        "php-curl-class/php-curl-class": "^9.5"
+  },
+    "require-dev": {
+        "phpunit/phpunit": "^9",
+        "phpstan/phpstan": "^1.2"
+    }
 }
