--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "ext-pcntl": "*",
     "ext-sockets": "*",
     "opis/closure": "^3.6",
-        "php-curl-class/php-curl-class": "^9.5"
+    "php-curl-class/php-curl-class": "^9.5",
+    "ext-pdo": "*"
   },
     "require-dev": {
         "phpunit/phpunit": "^9",
