--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,10 +1,6 @@
 name: PHP Composer
 
-on:
-  push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+on: [push, pull_request]
 
 jobs:
   build:
@@ -27,9 +23,6 @@ jobs:
 
       - name: Install dependencies
         run: composer install --prefer-dist --no-progress
-
-      # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
-      # Docs: https://getcomposer.org/doc/articles/scripts.md
 
       - name: Run test suites
         run: composer run-script test
