added Debug page - fixed format query executiontime - added event system - modified request information parser - fixed container interface typehint bug - removed `sender.php` not used - removed `startScript.php` not used - changed `app` get/set instance - changed handling error/exception report

--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,14 @@
             "Framework\\tests\\": "tests/"
         },
         "files": [
-            "src/helperFunctions.php",
-            "src/Debug/startScript.php"
+            "src/helperFunctions.php"
         ]
     },
     "authors": [
         {
             "name": "Remco Smits",
-            "email": "djsmits12@gmail.com"
+            "email": "djsmits12@gmail.com",
+            "role": "Developer"
         }
     ],
     "scripts": {
