--- a/composer.json
+++ b/composer.json
@@ -28,5 +28,11 @@
     "require-dev": {
         "phpunit/phpunit": "^9",
         "phpstan/phpstan": "^1.2"
+    },
+    "prefer-stable": true,
+    "minimum-stability": "dev",
+    "config": {
+        "sort-packages": true,
+        "optimize-autoloader": true
     }
 }
