Added working version of Route Model Binding
- Added new DependencyInjector class + tests
- Container class is keeping only singletons and bindings now
- Cleaned up route model binding
- Allow static call a model to use query builder + fixed
- Changed tests to DEV autoload to clean up production autoload

--- a/composer.json
+++ b/composer.json
@@ -3,12 +3,16 @@
     "description": "Lightweight PHP Framework. Includes fast and secure Database QueryBuilder, Advanced Routing with dynamic routes(middleware, grouping, prefix)",
     "autoload": {
         "psr-4": {
-            "Framework\\": "src/",
-            "Framework\\tests\\": "tests/"
+            "Framework\\": "src/"
         },
         "files": [
             "src/helperFunctions.php"
         ]
+    },
+    "autoload-dev":{
+        "psr-4": {
+            "Framework\\tests\\": "tests/"
+        }
     },
     "authors": [
         {
